tests/compile_errors/005-bad-named-variable-value.buzz
| Bad value type: expected type `tests.compile_errors.005-bad-named-variable-value.buzz.Yo`, got `int`
object Yo {
    str name,
}

test "Wrong named variable value" {
    Yo yo = Yo{ name = "yolo" };

    yo = 12;
}